Resolves issue with movie list index covers not being the right height

--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -16,6 +16,7 @@ article#list {
     height: 85px;
     img {
       width: 50px;
+      height: 75px;
       float: left;
       margin-right: -20px;
       border-left: 1px solid $primary-background-color;
